--- a/simple.html
+++ b/simple.html
@@ -94,6 +94,8 @@ var fileList = [
 	"sounds/drum-samples/Loops/WallOfSound046_BlueYellow.aif"
 ];
 
+var kInitialReverbLevel = 0.6;
+
 function setReverbImpulseResponse(url) {
     // Load impulse response asynchronously
     var request = xaudio.createAudioRequest(url, false);
@@ -131,36 +133,6 @@ function loadHihat(url) {
     }
 
     request.send();
-}
-
-function addSubjects() {
-    var s = "<h1>HRTF Subjects</h1> <ul> ";  
-
-    s += getSubjectString("1002");
-    s += getSubjectString("1013");
-    s += getSubjectString("1021");
-    s += getSubjectString("1043");
-    s += getSubjectString("1046");
-    s += getSubjectString("1047");
-    s += getSubjectString("1051");
-    s += getSubjectString("1053");
-    s += getSubjectString("1055");
-    s += getSubjectString("1056");
-    s += getSubjectString("1057");
-    s += getSubjectString("1058");
-    s += getSubjectString("1059");
-
-    s += "</ul> ";
-
-    var subjects = document.getElementById("subjects");
-
-    subjects.innerHTML = s;
-}
-
-function getSubjectString(name) {
-    return "<li onmousedown=\"xaudio.hrtfSubject = '" 
-    + name + "'; highlightElement(this); \">"
-    + name + "</li> ";
 }
 
 function highlightElement(object) {
@@ -220,13 +192,13 @@ function cutoffHandler(event, ui) {
 
 function addSliders() {
     addSlider("pitch");
-    addSlider("reverb");
-    addSlider("influence");
+    addSlider("ambience");
+    // addSlider("influence");
     addSlider("mainGain");
     addSlider("cutoff");
     configureSlider("pitch", 0.0, -2400.0, 2400.0, pitchHandler);
-    configureSlider("reverb", 0.25, 0.0, 1.0, reverbHandler);
-    configureSlider("influence", 0.5, 0.0, 1.0, influenceHandler);
+    configureSlider("ambience", kInitialReverbLevel, 0.0, 1.0, reverbHandler);
+    // configureSlider("influence", 0.5, 0.0, 1.0, influenceHandler);
     configureSlider("mainGain", 1.0, 0.0, 1.0, mainGainHandler);
     configureSlider("cutoff", 0.99, 0.0, 1.0, cutoffHandler);
 }
@@ -240,7 +212,6 @@ function setSourceBuffer(buffer) {
  */
  function init() {
      addSliders();
-     addSubjects();
 
      var canvas = document.getElementById('canvasID');
      var canvas2 = document.getElementById('canvasElevationID');
@@ -309,7 +280,7 @@ function setSourceBuffer(buffer) {
      setReverbImpulseResponse('impulse-responses/spatialized3.aif');
 
      source.playbackRate.value = 1.0;
-     wetMixerInput.gain.value = 0.25;
+     wetMixerInput.gain.value = kInitialReverbLevel;
 
      panner.setPosition(0, 0, -4.0);
      source.looping = true;
@@ -428,17 +399,20 @@ function handleMouseMove(event, canvas, type) {
 
 <body>
 
-<div id="info">
-</div>
-
-<!-- Sliders and other controls will be added here -->
-<div id="controls"> </div>
 
 <canvas id="canvasID" width="400" height="400" style="border: 10px inset blue;">
 </canvas>
 
 <canvas id="canvasElevationID" width="400" height="400" style="border: 10px inset blue;">
 </canvas>
+
+<div id="info">
+</div>
+
+<br>
+
+<!-- Sliders and other controls will be added here -->
+<div id="controls"> </div>
 
 
 <!-- Start of xaudio -->
@@ -449,7 +423,7 @@ function handleMouseMove(event, canvas, type) {
 <br><br>
 <div style="position:relative; height:350px;">
 	
-<div style="position:absolute; top:0; left:0; width:30%; border: 2px inset blue;">
+<div style="position:absolute; top:0; left:0; width:250px; border: 2px inset blue;">
 <h1>Sounds</h1>
 <ul>
 <li onmousedown="setAudioSource(11);">
@@ -533,9 +507,6 @@ spatialized 9 (medium open)</li>
 <li onmousedown="setReverbImpulseResponse('impulse-responses/bin_dfeq/s3_r4_bd.wav');">
   Binaural</li>
 
-<li onmousedown="setReverbImpulseResponse('impulse-responses/tim-warehouse/cardiod-35-10/cardiod-35-10.aif');">
-Warehouse Cardiod-35-10</li>
-
 <li onmousedown="setReverbImpulseResponse('impulse-responses/tim-warehouse/cardiod-35-10/cardiod-35-10-spread.aif');">
 Warehouse Cardiod-35-10-spread</li>
 
@@ -550,15 +521,6 @@ Warehouse Omni-35-10</li>
 
 <li onmousedown="setReverbImpulseResponse('impulse-responses/tim-warehouse/cardiod-true-stereo-15-8/cardiod-true-stereo-15-8.aif');">
 Warehouse True-Stereo-15-8</li>
-
-<li onmousedown="setReverbImpulseResponse('impulse-responses/backwards-4.aif');">
-Synthetic Backwards Noise 4 seconds</li>
-
-<li onmousedown="setReverbImpulseResponse('impulse-responses/backwards-2.aif');">
-Synthetic Backwards Noise 2 seconds</li>
-
-<li onmousedown="setReverbImpulseResponse('impulse-responses/cosmic-ping.aif');">
-Cosmic ping</li>
 
 
 <li onmousedown="setReverbImpulseResponse('impulse-responses/echo-chamber.aif');">
@@ -579,23 +541,6 @@ Wild Echo</li>
 <li onmousedown="setReverbImpulseResponse('impulse-responses/backslap1.aif');">
 backslap</li>
 
-<li onmousedown="setReverbImpulseResponse('impulse-responses/spreader25ms.aif');">
-spreader25ms</li>
-
-<li onmousedown="setReverbImpulseResponse('impulse-responses/spreader35ms.aif');">
-spreader35ms</li>
-
-<li onmousedown="setReverbImpulseResponse('impulse-responses/spreader55ms.aif');">
-spreader55ms</li>
-
-<li onmousedown="setReverbImpulseResponse('impulse-responses/spreader55ms-2.aif');">
-spreader55ms-2</li>
-
-<li onmousedown="setReverbImpulseResponse('impulse-responses/sifter.aif');">
-sifter</li>
-
-<li onmousedown="setReverbImpulseResponse('impulse-responses/spatialized.aif');">
-spatialized</li>
 
 </ul>
 
