for now switch from stop() to noteOff() API
git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@1917 642247e6-a953-0410-9eba-834bae0c6d03

--- a/dj.html
+++ b/dj.html
@@ -230,7 +230,7 @@ function loadBufferForSource(source, url) {
     var roundedUpDeltaTime = (60.0 / tempo) * roundedUpDeltaBeat;
     var time = anchorTime + roundedUpDeltaTime;
     
-    source.stop();
+    source.noteOff();
     source.buffer = request.buffer;
     source.noteOn(time);
   }
