--- a/dj.html
+++ b/dj.html
@@ -300,7 +300,7 @@ function init() {
     setReverbImpulseResponse('impulse-responses/filter-rhythm2.aif');
 
     bufferLoader1 = new BufferLoader(source1, "sounds/drum-samples/loops/blueyellow.aif");
-    bufferLoader2 = new BufferLoader(source2, "sounds/drum-samples/loops/crydamore.aif");
+    bufferLoader2 = new BufferLoader(source2, "sounds/drum-samples/loops/break29.aif");
 
     bufferLoader1.load();
     bufferLoader2.load();
@@ -342,8 +342,8 @@ break12
 break28
 </div>
 
-<div class='bigList' onmousedown="loadBufferForSource(source1, 'sounds/drum-samples/loops/crydamore.aif'); highlightElement(this);">
-crydamore
+<div class='bigList' onmousedown="loadBufferForSource(source1, 'sounds/drum-samples/loops/break29.aif'); highlightElement(this);">
+break29
 </div>
 
 </div
@@ -366,8 +366,8 @@ break12
 break28
 </div>
 
-<div class='bigList' onmousedown="loadBufferForSource(source2, 'sounds/drum-samples/loops/crydamore.aif'); highlightElement(this);">
-crydamore
+<div class='bigList' onmousedown="loadBufferForSource(source2, 'sounds/drum-samples/loops/break29.aif'); highlightElement(this);">
+break29
 </div>
 
 </div>
