update dj demo description
git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@1935 642247e6-a953-0410-9eba-834bae0c6d03

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 <td style="width: 60px;"> 
 <div style="display: block; text-align: left;"><a href="dj.html" imageanchor="1"><img src="images/dj.png" border="1"></a></div> 
 </td> 
-<td style="width: 300px;"><a href="dj.html"><b>Digital DJ</b></a> is a fun example where beat-matched loops may be loaded onto a left and right virtual turntable and controlled with a cross-fader and 2pole resonant filters.</td> 
+<td style="width: 300px;"><a href="dj.html"><b>Digital DJ</b></a> is a fun example where beat-matched loops may be loaded onto a left and right virtual turntable and controlled with a cross-fader, 2pole resonant filters, and an echo-delay effect.</td> 
 </tr> 
  
 <tr> 
