--- a/specification/specification.html
+++ b/specification/specification.html
@@ -82,7 +82,7 @@
 
         </ul> 
         
-        Additionally, a more complex can have the following:
+        Additionally, a more complex implementation can have the following:
         
         <ul> 
 
