fix improperly closed div to fix layout problem
git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@1971 642247e6-a953-0410-9eba-834bae0c6d03

--- a/dj.html
+++ b/dj.html
@@ -323,9 +323,9 @@ function init() {
 </div>
 
 
-<div style="position:relative; height:350px;">
+<div style="position:relative; height:350px; width:800px;">
 
-<div style="position:absolute; top:0; left:0; width:30%;">
+<div style="position:absolute; top:0; left:0; width:200px;">
 
 <!-- Left "turntable" -->
 
@@ -346,9 +346,9 @@ break28
 break29
 </div>
 
-</div
+</div>
 
-<div style="position:absolute; top:0; left:400px; width:50%;">
+<div style="position:absolute; top:0; left:400px; width:200px;">
 
 <!-- Right "turntable" -->
 
