tweak overall volume
git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@1974 642247e6-a953-0410-9eba-834bae0c6d03

--- a/box2d-js/box2d-audio.html
+++ b/box2d-js/box2d-audio.html
@@ -165,8 +165,8 @@
       convolver.connect(mainMixerInput2);
       mainMixer.connect(context.output);
       
-      // reduce overall volume
-      mainMixer.outputGain.value = 0.2;
+      // Change overall volume
+      mainMixer.outputGain.value = 1.5;
 
       pingBuffer = 0;
       loadPing(pingFileName);
