--- a/chrome-build.html
+++ b/chrome-build.html
@@ -41,7 +41,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 <h2>Chrome Build Instructions</h2>
 
 <p>
-The correct Chromium revision to build against is revision 50686.
+The correct Chromium revision to build against is revision 50686 (which matches the point where the WebKit audio branch was taken).
 
 For those who want more information, normal instructions for building Chrome are <a href="http://dev.chromium.org/developers/how-tos/get-the-code">here</a>:
 
